src/app/components/services/usability-testing/usability-testing.component.scss
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
@import "~bootstrap/scss/mixins";
@import '../../../../scss/colors';
h1{
    font-size: 50px;
    font-weight: 300;
    text-align: left;
    margin-bottom: 10px;
}
h5{
    font-size: 40px;
    font-weight: 300;
    text-align: left;
    margin-bottom: 10px;
}
.highlight{
    color: #60D6C9;
}
p{
    color: #797979;
    font-size: 14px;
    font-weight: 300;
    text-align: justify;
    margin-bottom: 30px;
}
.service{
    p{
        text-align: left;
        font-weight: 300;
    }
}
.btn{
    padding: 0;
    font-size: 12px;
    font-weight: 300;
    cursor: pointer;
}
.usability{
    margin-top: 180px;
    margin-bottom: 180px;
    h1{
        font-size: 64px;
        font-weight: 400;
        text-align: center;
        font-family: 'Noto Serif SC', serif;
    }
    .step-image{
        background-image: url('/assets/images/services/usability-testing/line-5.svg');
        width: 60%;
        height: 5px;
        margin-left: 115px;
        margin-top: -20px;
    }
    p{
        font-size: 14px;
        font-weight: 300;
        text-align: center;
        margin-top: 20px;
    }
    h3{
        margin-top: 150px;
        text-align: center;
        // img{
        //     width: 20%;
        //     height: 30px;
        // }
        span{
            font-size: 14px;
            font-weight: 300;
            margin-left: 10px;
        }
    }
}
.product{
    padding-top: 80px;
    padding-bottom: 100px;
    background-color: #FFF7F7;
    h1{
        font-size: 40px;
        font-family: 300;
        text-align: center;
    }
    p{
        font-size: 14px;
        font-weight: 300;
        text-align: center;
    }
}
.product-list{
margin-left: 80px;
margin-right: 80px;
background-color: #ffffff;
margin-top: -100px;
text-align: center;
img{
    text-align: center;
    margin-top: 20px;
}
p{
    font-size: 14px;
    font-family: 300;
    text-align: center;
    margin-top: 10px;
}
}

.testing{
    margin-top: 150px;
    margin-bottom: 100px;
    h1{
        font-size: 40px;
        font-family: 300;
        margin-top: 100px;
    }
    p{
        font-size: 14px;
        font-family: 300;
    }
    img{
        width: 70%;
        height: 40px;
    }
    h3{
        font-size: 17px;
        font-family: 300;
    }
}

.methods{
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #FFF7F7;
    h1{
        font-size: 40px;
        font-family: 300;
        margin-bottom: 40px;
    }
    h3{
        color: #6C6C6C;
        font-size: 18px;
        font-weight: 300;
    }
    p{
        font-size: 14px;
        font-family: 300;
        margin-bottom: 0;
    }
    img{
        width: 200%;
        height: 30px;
    }
}
// .searvice-jumbotron{
//     h1{
//         margin-top: 131px;
//     }
//     h3{
//         color: #6C6C6C;
//         font-size: 14px;
//         font-weight: 300;
//         text-align: left;
//         margin-bottom: 30px;
//         .list{
//             margin-left: 35px;
//         }
//     }
//     .step-image{
//         img{
//         width: 110%;
//         height: auto;
//     }
// }
// }
// .spacing {
//     margin-top: 120px;
//     margin-bottom: 80px;
//     h6{
//         font-size: 24px;
//         font-weight: 300;
//         text-align: left;
//         margin-bottom: 0px;
//     }
//     .highlight{
//         font-size: 40px;
//         font-weight: 300;
//         text-align: left;
//         margin-bottom: 10px;
//     }
//     .step-image img{
//         width: 80%;
//         height: auto;
//     }
// }
// .service-step2{
//     background-color: #F2F2F2;
//     padding-top: 50px;
//     padding-bottom: 50px;
//     h5{
//         margin-top: 20px;
//     }
//     h3{
//         color: #000000;
//         font-size: 12px;
//         font-weight: 300;
//         margin-bottom: 20px;
//         margin-top: 20px;
//     }
//     p{
//         margin-top: 20px;
//     }
//     h6{
//         color: #6C6C6C;
//         font-size: 14px;
//         font-weight: 300;
//         margin-bottom: 30px;
//     }

// }
.service-step3{
    h1{
        font-size: 40px;
        font-weight: 300;
        text-align: center;
    }
    h5{
        font-size: 24px;
        margin-bottom: 0;
        margin-top: 20px;
    }
    h4{
        font-size: 40px;
        font-weight: 300;
        text-align: left;
        margin-bottom: 10px;
    }
    .highlight{
        font-size: 40px;
        font-weight: 300;
        text-align: left;
        margin-bottom: 10px;
    }
    .step-image img{
        width: 80%;
        height: 200px;
    }
    .row{
        margin-bottom: 100px;
        margin-top: 100px;
    }
}

@include media-breakpoint-down(md) {
    h1{
        font-size: 30px;
        text-align: left;
        margin-bottom: 10px;
    }
    h5{
        font-size: 24px;
        text-align: left;
        margin-bottom: 10px;
        line-height: 32px;
    }
    p{
        font-size: 13px;
        margin-bottom: 30px;
        line-height: 20px;
    }
    .btn{
        font-size: 10px;
    }
    .usability{
        margin-top: 60px;
        margin-bottom: 60px;
        h1{
            font-size: 34px;
            font-weight: 400;
            text-align: left;
            font-family: 'Noto Serif SC', serif;
        }
        .step-image{
            width: 60%;
            height: 4px;
            margin-left: 20px;
            margin-top: -15px;
        }
        p{
            font-size: 13px;
            font-weight: 300;
            text-align: justify;
            margin-top: 10px;
        }
        h3{
            margin-top: 10px;
            text-align: left;
            margin-bottom: 20px;
            // img{
            //     width: 20%;
            //     height: 30px;
            // }
            span{
                font-size: 13px;
                font-weight: 300;
                margin-left: 20px;
            }
            .list1{
                margin-left: 28px;
            }
        }
    }
    .product{
        padding-top: 50px;
        padding-bottom: 100px;
        background-color: #FFF7F7;
        h1{
            font-size: 25px;
            font-family: 300;
            text-align: center;
        }
        p{
            font-size: 13px;
            font-weight: 300;
            text-align: center;
        }
    }
    .product-list{
    margin-left: 40px;
    margin-right: 40px;
    background-color: #ffffff;
    margin-top: -100px;
    text-align: center;
    img{
        text-align: center;
        margin-top: 20px;
    }
    p{
        font-size: 13px;
        font-family: 300;
        text-align: center;
        margin-top: 10px;
    }
    }
    
    .testing{
        margin-top: 40px;
        margin-bottom: 50px;
        h1{
            font-size: 25px;
            font-family: 300;
            margin-top: 50px;
        }
        p{
            font-size: 13px;
            font-family: 300;
            margin-bottom: 55px;
        }
        img{
            width: 100%;
            height: 40px;
        }
        h3{
            //margin-top: 10px;
            font-size: 15px;
            font-family: 300;
        }
        .line-2{
            height: 60px;
        }
        .col-md-2{
            width: 20%;
        }
        .col-md-10{
            width: 80%;
        }
    }
    
    .methods{
        padding-top: 50px;
        padding-bottom: 50px;
        background-color: #FFF7F7;
        h1{
            font-size: 25px;
            font-family: 300;
            margin-bottom: 40px;
        }
        h3{
            color: #6C6C6C;
            font-size: 15px;
            font-weight: 300;
            margin-top: 10px;
        }
        p{
            font-size: 13px;
            font-family: 300;
            margin-bottom: 0;
        }
        img{
            width: auto;
            height: auto;
        }
        .mb-5{
            margin-bottom: 1rem !important;
        }
    }
//     .searvice-jumbotron{
//         h1{
//             margin-top: 50px;
//         }
//         h3{
//             font-size: 13px;
//         }
//     .step-image img{
//         width: 100%;
//         height: auto;
//     }
// }
// .spacing {
//     margin-top: 70px;
//     h6{
//         font-size: 17px;
//         margin-bottom: 0px;
//         line-height: 20px;
//     }
//     .highlight{
//         font-size: 24px;
//         margin-bottom: 10px;
//     }
//     .step-image img{
//         width: 80%;
//         height: auto;
//     }
// }
// .service-step2{
//     padding-top: 20px;
//     padding-bottom: 20px;
//     p{
//         margin-top: 0px;
//     }
//     h6{
//         font-size: 13px;
//         margin-bottom: 31px;
//     }
//     .col-sm-1{
//         width: 10%;
//     }
//     .col-sm-8{
//         width: 90%;
//     }
// }
.service-step3{
    .row{
        margin-top: 30px;
        margin-bottom: 20px;
    }
    .m-first{
        order: 1;
    }
    .m-last{
        order: 2;
    }
    h1{
        font-size: 25px;
    }
    h5{
        font-size: 17px;
        margin-bottom: 0;
        margin-top: 20px;
        line-height: 20px;
    }
    h4{
        font-size: 24px;
        margin-bottom: 10px;
    }
    .highlight{
        font-size: 24px;
        margin-bottom: 10px;
    }
    .step-image{
        margin-top: 20px;
        margin-bottom: 20px;
        img{
            width: 80%;
            height: 200px;
        }
        }
}
}

